# code-review-assistant

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MEMORY.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  PROJECT_IDEAS.md  README.md  demo.sh  rebuild_project.sh
frontend/: jest.config.js
frontend/src/: App.css  App.tsx
memory/: 2026-03-30.md  2026-03-31.md  heartbeat-state.json
real-time-audio-feature-extractor/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.sh
real-time-audio-feature-extractor/audio-core/: Cargo.toml  build.rs  package.json
real-time-audio-feature-extractor/audio-core/src/: chroma.rs  lib.rs  spectral.rs  tempo.rs
real-time-audio-feature-extractor/audio-core/tests/: audio_analysis.rs  integration.rs
real-time-audio-feature-extractor/frontend/: index.html  package.json  vite.config.ts
real-time-audio-feature-extractor/frontend/src/: App.tsx  audioProcessor.ts  index.css  types.ts
smart-homelab-dashboard/: README.md
smart-homelab-dashboard/frontend/: index.html  package.json
smart-homelab-dashboard/frontend/src/: App.test.tsx
src/: analyzer.rs  config.rs  errors.rs  git_analyzer.rs  graph.rs  language.rs  lib.rs  main.rs  output.rs  parser_trait.rs  python_parser.rs  rust_parser.rs  tests.rs  ts_parser.rs  types.rs
