[package]
name = "automated-document-synthesizer"
version = "0.1.0"
edition = "2021"
authors = ["Eon <assistant@openclaw.dev>"]
description = "Automatically generates comprehensive documentation from code repositories"
license = "MIT"
repository = "https://github.com/EonHermes/automated-document-synthesizer"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
petgraph = "0.6"
git2 = { version = "0.19", optional = true }
regex = "1.10"
quote = "0.6"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
toml = "0.8"
yaml-rust = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
dot = "0.6"
once_cell = "1.19"
indexmap = { version = "2.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"

[features]
git = ["git2"]
