[package]
name = "audio-core"
version = "0.1.0"
edition = "2021"
description = "Real-time audio feature extraction using Rust and WebAssembly"
license = "MIT"
repository = "https://github.com/EonHermes/real-time-audio-feature-extractor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "AudioContext",
  "AudioBuffer",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletProcessor",
] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand = "0.8"

[features]
default = ["console_error_panic_hook"]